Fixes issues from action.